--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -92,7 +92,7 @@
                         <a href="/index.html">
                             <img class="whitelogo" src="/images/logowhite.png">
                         </a>
-                        <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare.</p>
+                        <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I like to explore new styles and techniques to venture into different time eras. I find it fascinating how times change and trends come and go but certain things just stick because they are built on such solid foundation. </p>
                         <a href="/about.html" class="txt-btn">More about me</a>
                     </div>
                     <div class="col-md-3 col-sm-6 footer-latest">
