--- a/_code/site/about.ejs
+++ b/_code/site/about.ejs
@@ -4,7 +4,8 @@
         <div class="col-sm-3 text-center">
             <a href="#">
                 <img src="/images/about-image.jpg">
-            </a>
+            </a><br>
+            <a class="btn btn-default btn-resume" href="#">See resume</a>
         </div>
         <div class="col-sm-9">
             <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I specialize in logo design, stationery, advertising and digital illustration.</p>
