--- a/_code/site/styles/styles.css
+++ b/_code/site/styles/styles.css
@@ -320,7 +320,11 @@ textarea.form-control {
 .about-page img {
     width: 100%;
     max-width: 200px;
-    margin-bottom: 20px;
+}
+
+.btn-resume {
+    width: 100%;
+    max-width: 200px;
 }
 
 /* Footer */
@@ -499,4 +503,10 @@ margin-left: 1%;
 .category-header {
     margin-bottom: 40px;
 }
+
+
+.about-page h1 {
+    text-align: center;
+}
+
 
