--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -165,6 +165,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.min.js"></script>
     <script src="/scripts/script.js"></script>
+    <%- include _ga %>
 </body>
 
 </html>
