--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.theme.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.1/css/bootstrapValidator.min.css">
+    
     <link rel="stylesheet" href="/styles/styles.css">
 
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
@@ -137,7 +138,7 @@
                         <p>You can reach me by phone, email or using the form in the contact page.</p>
                         <ul class="contact-list">
                             <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-                            <a href="mailto:contact@carmenbalaban.com"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com</a>
+                            <a class="email-address"><i class="glyphicon glyphicon-envelope"></i> </a>
                         </ul>
                     </div>
                 </div>
@@ -164,6 +165,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.1/js/bootstrapValidator.min.js"></script>
     <script src="/scripts/script.js"></script>
     <%- include _ga %>
 </body>
