--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -45,7 +45,7 @@
 
                 <div class="col-sm-6 contact-right">
                     <h2>Contact</h2>
-                    <p>I’m passionate about what I do and I am often working on a few projects at a time but I am always happy to hear about something new I can start on. Let me know if there’s something in my portfolio that you like in particular!</p>
+                    <p>I’m passionate about what I do and I am often working on a few projects at a time - but I am always happy to hear about something new I can start on. Let me know if there’s something in my portfolio that you like in particular!</p>
                     <h3>Carmen Balaban</h3>
                     <ul class="contact-list">
                         <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
