--- a/_code/site/index.ejs
+++ b/_code/site/index.ejs
@@ -7,7 +7,7 @@
         <div class="col-md-8 text-center">
             <header>
                 <h1>Hello, I’m Carmen Balaban.</h1>
-                <p>I’m a graphic designer specializing in visual identity, web design, illustration and print design.</p>
+                <p>I’m a graphic designer specializing in visual identity, web design, illustration and print design. This portfolio showcases my latest works.</p>
             </header>
         </div>
         <div class="col-md-2"></div>
