--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.theme.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.1/css/bootstrapValidator.min.css">
-    
+
     <link rel="stylesheet" href="/styles/styles.css">
 
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
@@ -71,12 +71,12 @@
     </header>
 
     <main>
-        <% if (current.path[0]=='index') { %>
+        <% if (current.path[0]=='index' ) { %>
             <%-yield %>
                 <% } else { %>
                     <div class="container page">
-                        <% if (current.path[0]=='portfolio') { %>
-                            <%- partial('portfolio/_portfolio.ejs') %>
+                        <% if (current.path[0]=='portfolio' ) { %>
+                            <%- partial( 'portfolio/_portfolio.ejs') %>
                                 <% } else { %>
                                     <%-yield %>
                                         <% } %>
@@ -93,7 +93,7 @@
                         <a href="/index.html">
                             <img class="whitelogo" src="/images/logowhite.png">
                         </a>
-                        <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I like to explore new styles and techniques to venture into different time eras. I find it fascinating how times change and trends come and go but certain things just stick because they are built on such solid foundation. </p>
+                        <p>I’m Carmen Balaban - a freelance graphic designer based in Baia Mare, Romania. I like to explore new styles and techniques of visual design, and I’m fascinated by the limitless combinations of shape, color and text that can be used to create great things.</p>
                         <a href="/about.html" class="txt-btn">More about me</a>
                     </div>
                     <div class="col-md-3 col-sm-6 footer-latest">
