--- a/_code/site/about.ejs
+++ b/_code/site/about.ejs
@@ -8,10 +8,12 @@
             <a class="btn btn-default btn-resume" href="#">See resume</a>
         </div>
         <div class="col-sm-9">
-            <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I specialize in logo design, stationery, advertising and digital illustration.</p>
-            <p>As a freelancer I’ve been able to work from advertising posters, brochures, catalogs to creating the design for several collections for school supplies with catalogs of proposal and inspiration guides. Besides this I’ve been involved in design related activities such as: design competitions, personal exhibitions, participation at international art and craft fairs and organization of festivals about visual arts.</p>
+            <p>I’m Carmen Balaban - a freelance graphic designer based in Baia Mare, Romania. I specialize in logo design, stationery, advertising, web design and digital illustration.
+</p>
+            <p>As a freelancer I’ve been able to create a wide range of products: from advertising posters, brochures, catalogs to designing several collections for school supplies. Besides this I’ve been involved in related activities such as: design competitions, personal exhibitions, participating at international arts and craft fairs, and organizing festivals about visual arts. </p>
 
-            <p>In my free time I enjoy solving crossword puzzles, making origami and my new interest is learning more about the Copperplate script. Also I like to learn new things and experience new challenges. Please feel free to get in touch via email or by using the form in the contact page.</p>
+            <p>In my free time I enjoy solving crossword puzzles, making origami and lately I’ve been practicing Copperplate calligraphy. Also I like to learn things and experience new challenges. Please feel free to get in touch via email or by using the form in the contact page.
+</p>
         </div>
     </div>
 </div>
