--- a/_code/site/about.ejs
+++ b/_code/site/about.ejs
@@ -2,18 +2,17 @@
     <h1>About me</h1>
     <div class="row">
         <div class="col-sm-3 text-center">
-            <a href="#">
-                <img src="/images/about-image.jpg">
-            </a><br>
-            <a class="btn btn-default btn-resume" href="#">See resume</a>
+            <img src="/images/about-image.jpg">
+            <br>
+            <a class="btn btn-default btn-resume" href="carmen-balaban-cv.pdf">See resume</a>
         </div>
         <div class="col-sm-9">
             <p>I’m Carmen Balaban - a freelance graphic designer based in Baia Mare, Romania. I specialize in logo design, stationery, advertising, web design and digital illustration.
-</p>
-            <p>As a freelancer I’ve been able to create a wide range of products: from advertising posters, brochures, catalogs to designing several collections for school supplies. Besides this I’ve been involved in related activities such as: design competitions, personal exhibitions, participating at international arts and craft fairs, and organizing festivals about visual arts. </p>
+            </p>
+            <p>As a freelancer I’ve been able to create a wide range of products: from advertising posters, brochures, catalogs to designing several collections for school supplies. Besides this I’ve been involved in related activities such as: design competitions, personal exhibitions, participating at international arts and craft fairs, and organizing festivals about visual arts.</p>
 
             <p>In my free time I enjoy solving crossword puzzles, making origami and lately I’ve been practicing Copperplate calligraphy. Also I like to learn things and experience new challenges. Please feel free to get in touch via email or by using the form in the contact page.
-</p>
+            </p>
         </div>
     </div>
 </div>
