--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -55,11 +55,11 @@
                     <div class="social-network">
                         <h3>Social</h3>
                         <ul class="social">
-                            <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://www.facebook.com/lakotacarmen" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
+                            <li><a href="http://www.pinterest.com/carmenbalaban" target="_blank"><i class="fa fa-pinterest"></i></a>
                             </li>
-                            <li><a href="#" target="_blank"><i class="fa fa-behance"></i></a>
+                            <li><a href="https://www.behance.net/CarmenBalaban" target="_blank"><i class="fa fa-behance"></i></a>
                             </li>
                         </ul>
                     </div>
