--- a/_code/site/about.ejs
+++ b/_code/site/about.ejs
@@ -4,7 +4,7 @@
         <div class="col-sm-3 text-center">
             <img src="/images/about-image.jpg">
             <br>
-            <a class="btn btn-default btn-resume" href="carmen-balaban-cv.pdf">See resume</a>
+            <a class="btn btn-default btn-resume" href="/files/carmen-balaban-cv.pdf">See resume</a>
         </div>
         <div class="col-sm-9">
             <p>I’m Carmen Balaban - a freelance graphic designer based in Baia Mare, Romania. I specialize in logo design, stationery, advertising, web design and digital illustration.
