--- a/_code/site/styles/styles.css
+++ b/_code/site/styles/styles.css
@@ -569,7 +569,7 @@ margin-left: 1%;
 }
 
 .home-image {
-    background-image: url(/images/home.jpg);
+    background-image: url(/images/home2.jpg);
     background-position: center;
     background-size: cover;
     height: 400px;
