--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -39,6 +39,7 @@
                             </div>
                         </div>
                         <input type="hidden" name="_next" value="//www.carmenbalaban.com/contact.html?sent=1" />
+                        <input type="text" name="_gotcha" style="display:none" />
                         <input type="submit" class="btn btn-default" value="Submit Message">
                     </form>
                 </div>
