--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -1,137 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>{{ title or "Carmen Balaban" }}</title>
-
+  <meta name="description" content="Portfolio website for Carmen Balaban, graphic designer specializing in branding, illustration, stationery, and print design.">
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
-
-  <link rel="stylesheet" href="/libs/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.theme.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.1/css/bootstrapValidator.min.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/styles.css">
-
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,900,300,700" rel="stylesheet">
-
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
 </head>
-
 <body>
-  <header>
-    <div class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle btn" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/index.html">
-            <img src="/images/logo.png" alt="Carmen Balaban logo">
-          </a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a class="nav-link" href="/index.html">Home</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle nav-link js-activated" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a class="nav-link" href="/portfolio/">All</a></li>
-                <li><a class="nav-link" href="/portfolio/branding/">Branding</a></li>
-                <li><a class="nav-link" href="/portfolio/print/">Print</a></li>
-                <li><a class="nav-link" href="/portfolio/stationery/">Stationery</a></li>
-                <li><a class="nav-link" href="/portfolio/illustration/">Illustration</a></li>
-              </ul>
-            </li>
-            <li><a class="nav-link" href="/about.html">About</a></li>
-            <li><a class="nav-link" href="/contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
+  {% set currentUrl = page.url or "" %}
+
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="/index.html" aria-label="Carmen Balaban home">
+        <img src="/images/logo.png" alt="Carmen Balaban logo">
+        <span class="brand-name">Carmen Balaban</span>
+      </a>
+
+      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
+      <nav id="site-nav" class="site-nav" data-open="false">
+        <ul class="menu-list">
+          <li>
+            <a class="menu-link {% if currentUrl == "/" or currentUrl == "/index.html" %}is-active{% endif %}" href="/index.html">Home</a>
+          </li>
+          <li class="menu-dropdown">
+            <button class="menu-trigger {% if "/portfolio/" in currentUrl %}is-active{% endif %}" type="button" aria-expanded="false">
+              Portfolio
+              <span class="chevron" aria-hidden="true"></span>
+            </button>
+            <ul class="submenu" aria-label="Portfolio sections">
+              <li><a class="menu-link {% if currentUrl == "/portfolio/" %}is-active{% endif %}" href="/portfolio/">All</a></li>
+              <li><a class="menu-link {% if "/portfolio/branding/" in currentUrl %}is-active{% endif %}" href="/portfolio/branding/">Branding</a></li>
+              <li><a class="menu-link {% if "/portfolio/print/" in currentUrl %}is-active{% endif %}" href="/portfolio/print/">Print</a></li>
+              <li><a class="menu-link {% if "/portfolio/stationery/" in currentUrl %}is-active{% endif %}" href="/portfolio/stationery/">Stationery</a></li>
+              <li><a class="menu-link {% if "/portfolio/illustration/" in currentUrl %}is-active{% endif %}" href="/portfolio/illustration/">Illustration</a></li>
+            </ul>
+          </li>
+          <li>
+            <a class="menu-link {% if currentUrl == "/about.html" %}is-active{% endif %}" href="/about.html">About</a>
+          </li>
+          <li>
+            <a class="menu-link {% if currentUrl == "/contact.html" %}is-active{% endif %}" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
 
-  <main>
+  <main id="main-content">
     {{ content | safe }}
   </main>
 
-  <footer>
-    <div class="footer-up">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-sm-6">
-            <h4>Who am I</h4>
-            <a href="/index.html">
-              <img class="whitelogo" src="/images/logowhite.png" alt="Carmen Balaban white logo">
-            </a>
-            <p>I’m Carmen Balaban - a freelance graphic designer based in Baia Mare, Romania. I like to explore new styles and techniques of visual design, and I’m fascinated by the limitless combinations of shape, color and text that can be used to create great things.</p>
-            <a href="/about.html" class="txt-btn">More about me</a>
+  <footer class="site-footer">
+    <div class="footer-top">
+      <div class="container footer-grid">
+        <section>
+          <h2 class="footer-title">Who I Am</h2>
+          <p>I’m Carmen Balaban, a freelance graphic designer based in Baia Mare, Romania. I build identities and visuals that blend shape, color, and storytelling.</p>
+          <a class="text-link" href="/about.html">More about me</a>
+        </section>
+
+        <section>
+          <h2 class="footer-title">Recent Work</h2>
+          <div class="footer-thumbs">
+            <a href="/portfolio/branding/" aria-label="Branding work"><img src="/images/work1.jpg" alt="Branding preview"></a>
+            <a href="/portfolio/illustration/" aria-label="Illustration work"><img src="/images/work2.jpg" alt="Illustration preview"></a>
+            <a href="/portfolio/illustration/" aria-label="Illustration work 2"><img src="/images/work3.jpg" alt="Illustration preview 2"></a>
+            <a href="/portfolio/stationery/" aria-label="Stationery work"><img src="/images/work4.jpg" alt="Stationery preview"></a>
           </div>
-          <div class="col-md-3 col-sm-6 footer-latest">
-            <h4>Latest Works</h4>
-            <div class="row thumbs gap-xs">
-              <div class="col-xs-6 thumb">
-                <figure class="img-overlay">
-                  <a href="/portfolio/branding/">
-                    <i class="fa fa-plus"></i>
-                    <img src="/images/work1.jpg" alt="Branding work preview">
-                  </a>
-                </figure>
-              </div>
-              <div class="col-xs-6 thumb">
-                <figure class="img-overlay">
-                  <a href="/portfolio/illustration/">
-                    <i class="fa fa-plus"></i>
-                    <img src="/images/work2.jpg" alt="Illustration work preview">
-                  </a>
-                </figure>
-              </div>
-              <div class="col-xs-6 thumb">
-                <figure class="img-overlay">
-                  <a href="/portfolio/illustration/">
-                    <i class="fa fa-plus"></i>
-                    <img src="/images/work3.jpg" alt="Illustration work preview 2">
-                  </a>
-                </figure>
-              </div>
-              <div class="col-xs-6 thumb">
-                <figure class="img-overlay">
-                  <a href="/portfolio/stationery/">
-                    <i class="fa fa-plus"></i>
-                    <img src="/images/work4.jpg" alt="Stationery work preview">
-                  </a>
-                </figure>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-md-offset-1">
-            <h4>Get in Touch</h4>
-            <p>You can reach me by phone, email or using the form in the contact page.</p>
-            <ul class="contact-list">
-              <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-              <li><a class="email-address"><i class="glyphicon glyphicon-envelope"></i> </a></li>
-            </ul>
-          </div>
-        </div>
+        </section>
+
+        <section>
+          <h2 class="footer-title">Get in Touch</h2>
+          <p>Reach out by phone or email. I’m always open to new collaborations.</p>
+          <ul class="contact-list">
+            <li><span>Phone</span> +40 765 275 808</li>
+            <li><span>Email</span> <a class="email-address"></a></li>
+          </ul>
+        </section>
       </div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">@ {{ site.startYear }}{% if site.currentYear > site.startYear %} - {{ site.currentYear }}{% endif %} Carmen Balaban. All rights reserved.</p>
-        <ul class="footer-navbar pull-right">
+    <div class="footer-bottom">
+      <div class="container footer-bottom-inner">
+        <p>@ {{ site.startYear }}{% if site.currentYear > site.startYear %} - {{ site.currentYear }}{% endif %} Carmen Balaban. All rights reserved.</p>
+        <ul class="footer-nav">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/portfolio/">Portfolio</a></li>
           <li><a href="/about.html">About</a></li>
@@ -141,11 +103,6 @@
     </div>
   </footer>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.1/js/bootstrapValidator.min.js"></script>
   <script src="/scripts/script.js"></script>
 </body>
-
 </html>
