--- a/src/_includes/portfolio-item.njk
+++ b/src/_includes/portfolio-item.njk
@@ -3,20 +3,30 @@ layout: layout.njk
 eleventyComputed:
   title: "{{ title }} | Carmen Balaban"
 ---
-<div class="container page">
-  <div class="row">
-    <div class="col-md-8">
-      <div id="portfolioItemCarrousel" class="owl-carousel owl-theme">
-        {% for image in images %}
-        <div class="item">
-          <img src="{{ image }}" alt="{{ title }} image {{ loop.index }}">
+<section class="section">
+  <div class="container">
+    <div class="project-layout">
+      <div class="project-gallery" data-carousel>
+        <button class="carousel-control prev" type="button" aria-label="Previous image">Previous</button>
+        <div id="portfolioItemCarrousel" class="item-carousel" tabindex="0">
+          {% for image in images %}
+          <figure class="item-slide">
+            <img src="{{ image }}" alt="{{ title }} image {{ loop.index }}">
+          </figure>
+          {% endfor %}
         </div>
-        {% endfor %}
+        <button class="carousel-control next" type="button" aria-label="Next image">Next</button>
+        <div class="carousel-dots" aria-hidden="true"></div>
       </div>
-    </div>
-    <div class="col-md-4 item-description">
-      <h2>{{ title }}</h2>
-      {{ content | safe }}
+
+      <aside class="project-content">
+        <p class="eyebrow">{{ categoryLabel }}</p>
+        <h1>{{ title }}</h1>
+        <div class="project-description">
+          {{ content | safe }}
+        </div>
+        <a class="text-link" href="/portfolio/{{ category }}/">Back to {{ categoryLabel }}</a>
+      </aside>
     </div>
   </div>
-</div>
+</section>
