--- a/src/contact.njk
+++ b/src/contact.njk
@@ -3,73 +3,60 @@ layout: layout.njk
 permalink: /contact.html
 title: Contact | Carmen Balaban
 ---
-<div class="container page">
+<section class="section">
   <div class="container">
-    <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8 text-center">
-        <h1>Get in touch</h1>
-        <p>Do you want to know more? I'd love to hear from you!</p>
-      </div>
-      <div class="col-md-2"></div>
+    <div class="section-header centered">
+      <h1>Let’s Work Together</h1>
+      <p>If you have a project in mind, send a quick brief and I’ll get back to you.</p>
     </div>
-    <div class="row contact-main">
-      <div class="col-sm-12">
-        <div class="row">
-          <div class="col-sm-6 contact-left">
-            <h2>Leave a Message</h2>
 
-            <div class="contact-sent alert alert-success">Message was sent successfully.</div>
+    <div class="contact-layout">
+      <section class="contact-panel">
+        <h2>Leave a Message</h2>
+        <p class="contact-sent">Message sent successfully.</p>
 
-            <form role="form" class="contact-form" method="post">
-              <div class="row">
-                <div class="col-sm-6">
-                  <div class="form-group">
-                    <input type="text" name="name" class="form-control" placeholder="Name (Required)"
-                      data-bv-notempty data-bv-notempty-message="Please enter your name">
-                  </div>
-
-                  <div class="form-group">
-                    <input type="email" name="_replyto" class="form-control" placeholder="Email (Required)"
-                      data-bv-notempty data-bv-notempty-message="Please enter your email address" data-bv-emailaddress>
-                  </div>
-
-                  <div class="form-group">
-                    <input type="text" name="subject" class="form-control" placeholder="Subject">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12">
-                  <textarea name="message" class="form-control" placeholder="Enter your message..."></textarea>
-                </div>
-              </div>
-              <input type="hidden" name="_next" value="//www.carmenbalaban.com/contact.html?sent=1" />
-              <input type="text" name="_gotcha" style="display:none" />
-              <input type="submit" class="btn btn-default" value="Submit Message">
-            </form>
+        <form class="contact-form" method="post">
+          <div class="field-grid">
+            <label>
+              Name
+              <input type="text" name="name" required>
+            </label>
+            <label>
+              Email
+              <input type="email" name="_replyto" required>
+            </label>
           </div>
 
-          <div class="col-sm-6 contact-right">
-            <h2>Contact</h2>
-            <p>I’m passionate about what I do and I am often working on a few projects at a time - but I am always happy to hear about something new I can start on. Let me know if there’s something in my portfolio that you like in particular!</p>
-            <h3>Carmen Balaban</h3>
-            <ul class="contact-list">
-              <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-              <li><a class="email-address"><i class="glyphicon glyphicon-envelope"></i> </a></li>
-            </ul>
-            <div class="social-network">
-              <h3>Social</h3>
-              <ul class="social">
-                <li><a href="https://www.facebook.com/lakotacarmen" target="_blank" rel="noopener noreferrer"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.pinterest.com/carmenbalaban" target="_blank" rel="noopener noreferrer"><i class="fa fa-pinterest"></i></a></li>
-                <li><a href="https://www.behance.net/CarmenBalaban" target="_blank" rel="noopener noreferrer"><i class="fa fa-behance"></i></a></li>
-              </ul>
-            </div>
-          </div>
+          <label>
+            Subject
+            <input type="text" name="subject">
+          </label>
+
+          <label>
+            Message
+            <textarea name="message" rows="7" required></textarea>
+          </label>
+
+          <input type="hidden" name="_next" value="//www.carmenbalaban.com/contact.html?sent=1">
+          <input type="text" name="_gotcha" autocomplete="off" tabindex="-1" class="honeypot" aria-hidden="true">
+
+          <button type="submit" class="btn btn-primary">Send Message</button>
+        </form>
+      </section>
+
+      <aside class="contact-sidebar">
+        <h2>Contact</h2>
+        <p>I’m often juggling a few projects at a time, but I’m always interested in hearing what you’re building and where design can help.</p>
+        <ul class="contact-list">
+          <li><span>Phone</span> +40 765 275 808</li>
+          <li><span>Email</span> <a class="email-address"></a></li>
+        </ul>
+        <div class="social-links" aria-label="Social media links">
+          <a href="https://www.facebook.com/lakotacarmen" target="_blank" rel="noopener noreferrer">Facebook</a>
+          <a href="https://www.pinterest.com/carmenbalaban" target="_blank" rel="noopener noreferrer">Pinterest</a>
+          <a href="https://www.behance.net/CarmenBalaban" target="_blank" rel="noopener noreferrer">Behance</a>
         </div>
-      </div>
-
+      </aside>
     </div>
   </div>
-</div>
+</section>
